--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Teacher Sign-In</title>
+  <title>signature professeur</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -14,7 +14,7 @@
       <button type="submit">Sign In</button>
     </form>
 
-    <h2>Signed Teachers</h2>
+    <h2>professeurs deja signées</h2>
     <ul id="signedList"></ul>
   </div>
 
