--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>signature professeur</title>
+  <title>Teacher Sign-In</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>Teacher Sign-In</h1>
+    <h1>signature professeur</h1>
     <form id="signForm">
       <input type="text" id="teacherName" placeholder="Enter your name" required />
-      <button type="submit">Sign In</button>
+      <button type="submit">effectuer</button>
     </form>
 
     <h2>professeurs deja signées</h2>
